Fixed Sidebar scrollbar

--- a/frontend/styles/jam/components/Sidebar.module.css
+++ b/frontend/styles/jam/components/Sidebar.module.css
@@ -11,7 +11,7 @@
   transform: translateY(50%);
 
   max-height: 90vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   width: 15rem;
   background-color: var(--background-color);
 
